hphp/test/zend/good/tests/classes/private_002.php.expectf
Call pass::show()
Call fail::show()

Fatal error: Call to private method pass::show() from context 'fail' in %s/private_002.php on line 16
